[package]
name = "ReBEl"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12.2"

[dependencies]
prost = "0.13.3"
prost-types = "0.13.3"
tonic = "0.12.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.89"
ring = "0.17.8"
hex = "0.4.3"
tokio-stream = "0.1.16"
bytes = "1.7.2"
